<resources>
    <string name="app_name" translatable="false">bako</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Alarm</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="planing">Planing</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="themeTitle">Theme light/sombre</string>
    <string name="themeKey">theme</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="pipe">|</string>
    <string name="code_d_affectation">Code d\'affectation</string>
    <string name="heure_de_d_but_de_travail">Heure de début de travail</string>
    <string name="heure_de_fin_de_travail">Heure de fin de travail</string>
    <string name="couleur">Couleur</string>
    <string name="ajouteroumodifier">Ajouter Ou Modifier</string>
    <string name="line_2">Line 2</string>
    <string name="editworkcode">EditWorkCode</string>
    <string name="line_3">line 3</string>
    <string name="definition_des_codes_de_travail">Définition des codes de travail</string>
    <string name="definition_des_codes_de_conges">Définition des codes de congès</string>
    <string name="plus" translatable="false">+</string>
    <string name="returntolistworkcodemanager">returnToListWorkCodeManager</string>
    <string name="labelDiffPrevisionnelReel">
        Différence\nPrévisionnel/Réel
    </string>
    <string name="labelCompteEpargneTemps">
        Compte\népargne temps
    </string>
    <string name="hour" translatable="false">H</string>
    <string name="previewDiffPrevisionnelReel" translatable="false">43</string>
    <string name="previewValueCompteEpargneTemps" translatable="false">23</string>
    <string name="labelGraphNbHeureDansAnnee">Nombre d\'heure dans l\'année</string>
    <string name="labelDateProchainConges">Date du prochain jour de congé</string>
    <string name="previewProchainConge">24/05/2000</string>
    <string name="settings">Settings</string>
    <string name="nb_hours_supp">Annual extra hours</string>
    <string name="nb_hours_annual">Annual hours</string>
    <string name="edit_work_code">Edit work codes</string>
    <string name="edit_vacation_code">Edit vacation codes</string>
    <string name="edit_codes">Codes Settings</string>
    <string name="pr">Pré</string>
    <string name="re">Ré</string>
    <string name="medical_planning">Gestion de planning medical</string>
    <string name="update">Mettre à jour</string>
    <string name="add">Ajouter</string>
    <string name="global_hour">Configuration des heures global</string>
</resources>