<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <EditTextPreference
            app:key="nbHeureSup"
            app:title="Nombre d'heure supplémentaire"
            app:defaultValue="0" />

        <EditTextPreference
            app:key="nbHeureAnnuel"
            app:title="Nombre d'heure annuel"
            app:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <EditTextPreference
            app:key="nbHeureAnnuel"
            app:title="Nombre d'heure congés restants"
            app:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Theme">

        <SwitchPreference
            app:key="@string/themeKey"
            app:title="@string/themeTitle"
            app:defaultValue="@bool/pref_show_default" />

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>