<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical" android:padding="20dp">

    <TextView
            android:id="@+id/textView"
            android:labelFor="@+id/editTextCodeAffectationTravail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/code_d_affectation"
    />

    <EditText
            android:id="@+id/editTextCodeAffectationTravail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/textColor"/>

    <TextView
            android:id="@+id/heureDebutTravailLabel"
            android:labelFor="@+id/editTextHeureDebutTravail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/heure_de_d_but_de_travail"
    />

    <EditText
            android:id="@+id/editTextHeureDebutTravail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:textColor="@color/textColor"/>

    <TextView
            android:id="@+id/heureFinTravailLabel"
            android:labelFor="@+id/editTextHeureFinTravail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/heure_de_fin_de_travail"
    />

    <EditText
            android:id="@+id/editTextHeureFinTravail"
            android:labelFor="@+id/heureFinTravailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:textColor="@color/textColor"/>

    <TextView
            android:id="@+id/colorPickerLabel"
            android:labelFor="@+id/addOrUpdateCodeTravail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/couleur"
    />

    <Button
            android:id="@+id/colorPickerWorkCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1"/>
        <Button
                android:text="@android:string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cancel_dialog_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>
        <Button
                android:id="@+id/addOrUpdateCodeTravail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouteroumodifier"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>
    </LinearLayout>

</LinearLayout>